# MultiHop-Federeated-Split-Learning

./: CMakeLists.txt  README.md  main.cpp  main_.cpp  mydataset.h  training.cpp  vgg.cpp  vgg.h  vgg_help.cpp
datasets/: mydataset.cpp  mydataset.h
logs_acc/logs_resnet101/fl_5/: fl_5_ex
mathematical model/: README.md  fully_utilized.py  fully_utilized_alter.py  fully_utilized_resnet.py  fully_utilized_resnet_hete.py  fully_utilized_vgg.py  horizontal.py
memcheck/: main.cpp  memcheck.sh
models/: models.h  vgg_help.h
models/lenet5/: lenet.cpp  lenet.h  lenet_help.cpp  lenet_help.h  lenet_train.cpp  lenet_train.h
models/resnet/: resBlock.cpp  resBlock.h  resBottleneckBlock.cpp  resBottleneckBlock.h  resBottlnecBlock.cpp  resnet.h  resnet_split.cpp  resnet_split.h  resnet_train.cpp  resnet_train.h
models/vgg/: vgg.cpp  vgg_help.cpp  vgg_help.h  vgg_train.cpp  vgg_train.h
optimize_split/: heuristic_model.py  split.txt  split_model.py  split_model_het.py  split_model_het_general.py  split_model_llm.py
optimize_split/real_data/: accumulative.xlsx  resnet101_CIFAR.xlsx  vgg19_CIFAR.xlsx
pipeline_simulation/: CMakeCache.txt  Makefile  Message.h  State.h  Task.cpp  Task.h  aggregator.cpp  cmake_install.cmake  compute_node.cpp  data_owner.cpp  main1.cpp  my_json.h  network_layer.cpp  network_layer.h  systemAPI.cpp  systemAPI.h
pipeline_simulation/profiling/: data_owner_saturation.cpp  data_owner_simulated.cpp  rpi_stats.h  rpi_stats.hpp  run_a.sh  run_c.sh  run_data_owners.sh  run_data_owners_init.sh  run_data_owners_worker.sh  run_data_owners_workser.sh  run_exper.sh
utils/: mylogging.cpp  mylogging.h  pipeline_logging.cpp  pipeline_logging.h  split_training.cpp  split_training.h
